# MLOps_Course_Task_2

./: .gitignore  Dockerfile  README.md  pre-commit.yaml  pyproject.toml
